--- a/public/index.css
+++ b/public/index.css
@@ -7,9 +7,9 @@ body {
 
 main {
     width: 100%;
-    min-height: 100%;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: stretch;
 }
 
@@ -21,7 +21,7 @@ main > fieldset {
     margin: 0;
     border: none;
     border-top: 1px solid gray;
-    background: linear-gradient(to top, #c1c8ff 0%, #d0c7ff 100%);
+    background-color: rgb(245, 245, 245);
 }
 
 form.pe--form {
